[tool.poetry]
name = "cesa"
version = "0.1.0"
description = "Python module for calculating coexisting or synchronization relationships in microbiome data"
authors = ["Rie Maskawa <masukawa.r.aa@m.titech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
pandas = "^2.2.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
